--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
       </td>
     </tr>
     <tr>
+      <td>24.03.2023</td>
+      <td>
+        <a href="https://gematik.github.io/spec-ISiK-Vitalparameter-und-Koerpermasse/IG/2.0.3/ImplementationGuide-markdown-Einfuehrung.html">2.0.3</a>
+      </td>
+      <td>Technical Correction 3</td>
+      <td>2.0.3</td>
+    </tr>
+    <tr>
       <td>31.01.2023</td>
       <td>
         <a href="https://gematik.github.io/spec-ISiK-Vitalparameter-und-Koerpermasse/IG/2.0.2/ImplementationGuide-markdown-Einfuehrung.html">2.0.2</a>
