--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
   <tbody>
     <tr>
       <td colspan="4" style="background-color: #dddddd;">
+        <strong>Modul Vitalparameter und Körpermaße Stufe 3</strong>
+      </td>
+    </tr>
+    <tr>
+      <td>01.07.2023</td>
+      <td>
+        <a href="https://gematik.github.io/spec-ISiK-Vitalparameter-und-Koerpermasse/IG/3.0.0/ImplementationGuide-markdown-Einfuehrung.html">3.0.0</a>
+      </td>
+      <td>Ausbaustufe 3</td>
+      <td>3.0.0</td>
+    </tr>
+    <tr>
+      <td colspan="4" style="background-color: #dddddd;">
         <strong>Modul Vitalparameter und Körpermaße Stufe 2</strong>
       </td>
     </tr>
