--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
       </td>
     </tr>
     <tr>
+      <td>21.03.2024</td>
+      <td>
+        <a href="https://gematik.github.io/spec-ISiK-Vitalparameter-und-Koerpermasze/IG/3.0.2/ImplementationGuide-markdown-Einfuehrung.html">3.0.2</a>
+      </td>
+      <td>Ausbaustufe 3</td>
+      <td>3.0.2</td>
+    </tr>
+    <tr>
       <td>05.01.2024</td>
       <td>
         <a href="https://gematik.github.io/spec-ISiK-Vitalparameter-und-Koerpermasze/IG/3.0.1/ImplementationGuide-markdown-Einfuehrung.html">3.0.1</a>
